fix open drawer button alignment

--- a/styles/css/vtex.store-drawer.css
+++ b/styles/css/vtex.store-drawer.css
@@ -13,6 +13,10 @@
   }
 }
 
+.openIconContainer--checkout {
+  margin-right: -.75rem;
+}
+
 .drawerHeader--checkout {
   overflow: hidden;
 }
